# Aetheris

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: build_and_deploy.yaml
helm/: Chart.yaml  values.yaml  values.yaml.example
helm/templates/: backend-deployment.yaml  backend-service.yaml  deployment-api.yaml  deployment-postgres.yaml  pvc-postgres.yaml  service-api.yaml
schema/: models.py  return_models.py
server/: settings.py
server/auth/: middleware.py
server/v1/: __init__.py
server/v1/routes/: user.py
utils/: snowflake.py
