[project]
name = "Aetheris"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Vahin Mehra", email = "vahin@vahin.dev"},
]
dependencies = ["litestar[standard]>=2.14.0", "sqlalchemy[asyncio]>=2.0.37", "asyncpg>=0.30.0", "advanced-alchemy>=1.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GNU AGPLv3"}


[tool.pdm]
distribution = false